--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,14 @@
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
+@font-face {
+  font-family: 'Hubot Sans';
+  src:
+    url('../public/fonts/Hubot-Sans.woff2') format('woff2 supports variations'),
+    url('../public/fonts/Hubot-Sans.woff2') format('woff2-variations');
+  font-weight: 200 900;
+  font-stretch: 75% 125%;
+}
 
 :root {
   --foreground-rgb: 0, 0, 0;
@@ -34,4 +42,10 @@ body {
 }
 .monaSans{
   font-family: "Mona Sans";
+}
+.hubotSans{
+  font-family: "Hubot Sans";
+}
+.EsiTitle{
+  background-color: #8a220240;
 }
