--- a/app/globals.css
+++ b/app/globals.css
@@ -77,3 +77,6 @@ body {
 -webkit-box-shadow: 6px 8px 15px 0px rgba(0,0,0,0.43);
 -moz-box-shadow: 6px 8px 15px 0px rgba(0,0,0,0.43);
 }
+.warningColor{
+  background-color: #ffb5b569;
+}
