--- a/app/globals.css
+++ b/app/globals.css
@@ -83,3 +83,18 @@ body {
 .footerColor{
   background-color: #3D3D3D;
 }
+
+.swiper {
+  width: 240px;
+  height: 320px;
+}
+
+.swiper-slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 18px;
+  font-size: 22px;
+  font-weight: bold;
+  color: #fff;
+}
